--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,18 @@
+# MySQL properties
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/usersdb
+spring.datasource.url=jdbc:mysql://localhost:3306/userrole
 spring.datasource.username=root
 spring.datasource.password=root
 
+# Hibernate properties
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+#Enable hidden method
+spring.mvc.hiddenmethod.filter.enabled=true
+
+#Thyme Leaf properties
+spring.thymeleaf.cache=false
+spring.thymeleaf.enabled=true
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
